--- a/BasicInformation/午後/令和3年春季.md
+++ b/BasicInformation/午後/令和3年春季.md
@@ -135,6 +135,38 @@ RIP (Routing Information Protocol)
 
 ## ソフトウェア設計
 
+1
+a オ ○ EIF
+b エ ○ ILF
+c ア ×→イ 5
+d イ ○ EO
+
+2
+e ア ○
+f イ ○
+g カ ○ 5
+h イ ○ 1
+i ク ○ 58
+j キ ○ 46.4
+
+4 + 5 + 3*3 + 5* 7 + 1*5 = 9 + 9 + 35 + 5 = 58
+58 * 0.8 = 46.4
+64
+40
+
+30分 10問中9問正解 90%  
+
+1つでも間違えたらアウトな問題だった。  
+話もなんとなくしかわからなかったが、状況証拠的にこれしかないなって奴を選んだら9割取れたのでまぁいいとしようじゃないか。  
+間違えた一問だけよく見て終わりにする。  
+何はともあれ、難しそうだと思って嫌厭した問題でこれほど出来たのだからいいだろう。  
+
+間違った問題に関してだが、どうやら、ボタンやメッセージも含んでの合計らしい。  
+一番の疑問はプルダウンメニューのデータについてだ。  
+倉庫1～3は定数項目で、定数項目は「見出しや定数項目等の固定値項目を除く」って文言があるから入れなかったのにカウントされているのが気に食わない。  
+多分、どちらにせよ間違っていたと思うし、これは意味の問題になるからどうでもいいや。  
+問題作った奴が悪い。  
+
 ---
 
 ## アルゴリズム
