--- a/BasicInformation/午後/令和3年秋期.md
+++ b/BasicInformation/午後/令和3年秋期.md
@@ -11,18 +11,257 @@
 
 ## セキュリティー
 
+1
+a ク ○
+b エ ○
+c ウ ○
+f カ ○
+
+2
+エ ○
+
+3
+イ ○
+
+4
+d エ ×→イ
+e キ ○ →ぎひょうが訂正表出してた奴か。
+
+5
+ア、ウ ○
+
+16分 9問中9問正解 90%
+
+話はわかった。表現の問題だ。  
+DMZだろうが、社内LANだろうが、社内である事に代わりはない。  
+あぁ、社内LANって言ったら本当に内部のネットワークの事だから確かにそれだとダメだよな。  
+設置している場所はあくまでDMZであって、社内の一部ではあるが、そこは厳密に指定しないとDMZ中でNTP使えなくなるもんね。  
+みすったなー。  
+ごちゃごちゃ言いながら問題を解くのはいいと思ったので、聞こえない範囲でやりたいと思いました。  
+
+そういえば、DDosのDってのが何なのかいまだに知らないのと、Dosとの違いが何なのかと、レインボー攻撃が何なのかも怪しいので、ここでしっかりまとめる事にします。
+ついでに水飲み場攻撃もしっかりしておきますか。
+
+●DDoS(Distributed Denial of Service)
+
+Distributed
+Distributeの過去形
+ITの分野では分散の意味になるらしい。
+
+Distribute
+分配する。配る。配布する。流通させる。供給する。
+
+denial : 否認、否定
+denialは名詞
+
+denyは動詞 拒否する
+
+複数の機器を踏み台にして、特定の機器に一斉攻撃を仕掛けるサイバー攻撃の一種。  
+Distributedの分散は複数の機器を使う事に起因している。  
+
+DoS攻撃との違い。
+DoS攻撃は1台の機器から対称の機器に過剰なアクセスを仕掛けるサイバー攻撃。
+分散がないので、1台からってことになる。
+
+・DoS攻撃：1台の機器から、対象の機器に過剰な負荷をかける攻撃
+・DDoS攻撃：複数の機器を「踏み台」に利用して、対象の機器に過剰な負荷をかける攻撃
+
+●レインボー攻撃
+
+パスワードを不正に得る手法の1つ。
+パスワードとして使われるような文字列のハッシュ値をテーブル化しておき、解読したいパスワードのハッシュ値と比較することでパスワードを推測する手法。
+
+var hashList = Hash(new List<string>(){使われそうなパスワード一覧]);
+var getHash = 入手したハッシュ;
+var result = hashList.FirstOrDefault(f => f == getHash);
+つまりこういうことだろう。
+
+パスワードは大抵ハッシュ化されているので、ハッシュ値を入手したうえで、パスワードをハッシュ一覧にして、  
+同じだったら、そのパスワードを入手できるって手法。  
+
 ---
 
 ## データベース
+
+1
+エ ○
+
+2
+a エ ○
+b カ ○
+
+3
+c ウ ○
+d ア ○
+e カ ○
+
+4
+ア ×→ウ
+
+19分 7問中6問正解 90%  
+
+他は簡単だったので特になし。  
+最後の問題だけわからなかった。  
+答えを見ても納得できないので、解説を読みたい。  
+
+あー、あくまで職位コードに関する問題であって、俺の考えはオペレーションに関するものだったんだ。  
+この地点で相当ずれていた。  
+というか、職位コードに関する答えなんて1つしかないんだよなぁ。  
+しかも、よく見てみれば、職位コード履歴なんてものはないから、職位が変わったとたん全部の金額が変わることになる。  
+これは明らかに不具合だ。  
+問題文で当時の職位コードに基づくって明言されていても、データベースの構造がそれに対応できていない事を指摘するための問題だったんだ。  
+やられた。  
 
 ---
 
 ## ソフトウェア設計
 
+1  
+ウ ○  
+
+2  
+a ア ○  
+b イ ○  
+c エ ×→イ  
+
+3  
+(1) イ ○  
+(2) エ ○  
+(3) イ ○  
+
+25分 7問中6問正解  
+
+全体的に話はわかった。  
+どの会社をポアするかで間違ってしまった。  
+個人的には海外だし、取引ないし、拡張性も中程度だから外したけど、業界での採用実績が重要だった模様。  
+あ、それを基準にして考えれば問題文中にそう書かれている。  
+「化学薬品の製造・販売業界で複数の会社に採用されている、販売管理、生産管理、財務管理のシステムを統合できるERPパッケージを導入する」  
+採用実績がない地点でイの会社は選定から外れるというわけか。  
+なんというか、日本語の問題だったな。  
+
+●ステアリングコミッティ  
+プロジェクトの運営を行う運営委員会の事を指す。  
+ある程度の大きさのプロジェクトでは、利害関係者の調整や、参画する複数企業の調整などを行って、プロジェクトが円滑に進むように活動する組織です。  
+
+●オフショア開発  
+システムの開発、運用、保守などを人件費の安価な海外企業に委託すること。  
+
 ---
 
 ## アルゴリズム
 
+1
+a ア ○
+b ウ ○
+c エ ○
+d オ ×→エ
+
+2
+エ ×→イ
+
+3
+カ ○
+
+30分 6問中4問正解 60%
+
+うーん。いまいち。  
+なんとなくわかったけど、最後までトレースできなかった。  
+設問2に関しては、エを選びたいところだが、よく見ると全体が完成するためには後半のfor文を回す必要があることがわかった。  
+最後の最後で導き出したトレースでようやくわかったことなので、試験の時間に余裕があるようだったらもう少しいけたかもしれない。  
+
+設問1のdに関しては、インデックスが0から始まるから1文字増やして上げればいいのではと思って、何も考えずにそれをやったけど、ダメだった。  
+というか、Postfixの[k]に代入した後に+1してるから、わざわざ+1せずとも、文字数はしっかり数えられている事になるか。  
+時間なかったから先入観だけで言ったけど、そこまで考えるべきだった。  
+
+中々おしい問題だった。  
+
+スタックの状態も確認しながらやろうとすると、頭の中がパンクする。
+今までどうやって解いていたのか不思議でならない。
+現状でこれなのだから、もっと前は大変だったのでは無かろうか？
+
+(1+2) * 3 = 9
+
+exptext[0] = '(' → 4
+getPriority(top()) → -1
+
+4 )(0)
+3 2(3)
+2 +(1)
+1 1(3)
+0 ((4)
+EOS (-1)
+
++ < 1
+postfix[k(0)] ← 1(3)
+k = k + 1
+
+top()→(:(4)
+push(+)
+
+( 2 + 4 ) * 3 + 5 * 6 EOS
+4 3 1 3 0 2 3 1 3 2 3 -1
+
+exptext[i] <= getPriority(top())
+
+24+3*56*+
+
+exptext[2] = +(2)
+
 ---
 
 ## Java
+
+1
+a オ ○
+b ウ ○
+c エ ×→オ
+
+2
+d ア ○
+e エ ○
+f サ ○
+g キ ○
+h オ ○
+i サ ×→ウ
+
+30分オーバー 9問中7問正解 80%
+
+久しぶりに嵌った。  
+最後の最後で前回のオペレーターが生きていることに気が付いたらある程度納得が言ったけど、それを発見できない間はとても苦しんだ。  
+ごちゃごちゃ言いながらやってもダメだった。  
+気が付ければ簡単な問題何だろうけどねぇ。私は嵌ってしまった。  
+とはいっても、まぁそれなりに正解はしているからよかったといえばよかったけどねぇ。  
+
+それはそうと、cを間違えたのは痛すぎる。  
+なぜ間違えた？  
+数字なので、コンストラクタの引数は2つ。  
+素直にDIGIT , c の選択肢しかないなーと思っていたのだが？  
+c - '0'が必要。なんで？  
+文字コードの話が絡む見たい。  
+ASCIIコード上で 0～9 の文字は 0x30~0x39 で定義されている見たい。  
+で、引数として渡すのは数値型なので、変換してあげないといけないみたい。  
+演算子のほうは普通に渡してるから、そのままでいけるように見えるじゃんね。  
+ひっかけかこれは。  
+
+'0' - '0' = 0x30 - 0x30 = 0x00 = 0
+'1' - '0' = 0x31 - 0x30 = 0x01 = 1
+…
+'9' - '0' = 0x39 - 0x30 = 0x09 = 9
+
+ってなわけで c - '0'が必要何だってさ。
+
+後は、まさかインターフェースの匿名クラスの実装まで出るとは思わなかった。  
+
+コンストラクタ内部でthis()という記述を使うことで、同じクラスの別のコンストラクタを呼び出せる。
+
+インターフェースを匿名クラスとして実装する。
+new インターフェース() { クラス宣言 }
+と記述することで、匿名クラスを生成することができる。
+確かC#の時でもまとめた気がする。
+インターフェースをnewできるけどこれはなに？ってのに対して、これはインターフェースを実装した匿名クラスを実装しているからって意味だった気がする。
+普通に基本情報のカバー範囲だったのか。
+
+今回のJavaや前回のアルゴリズムでもそうなのだが、わかりそうでわからない場合って、メモしてもあまり意味がないことが多々あるんだよな。
+なんというか、当たり前の事をメモするしかないから、結局あーでもないこーでもないって頭の中で考えるだけになってしまう。
+そうすると、割と嵌ってしまう経口がある気がする。
+何言ってるかわからないと思うけど、個人的にやってきてそう思うのだ。
