--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -294,8 +294,47 @@ Singletonパターンが適したクラス例
 
 ## C# ToString()
 
-SettlementAmount.ToString("N0") → SettlementAmount:N0
-に省略できるらしい。便利。
+SettlementAmount.ToString("N0") → SettlementAmount:N0  
+に省略できるらしい。便利。  
+
+因みにToStringするときに文字列で指定するこれは、「書式設定」というらしい。  
+そのまんまだね。  
+
+---
+
+## staticクラスでthisが使えないのはなぜか？
+
+①スタティックって結局何なのか？  
+②staticクラスのメンバーにthisでアクセスできないのはなぜなのか？  
+
+### ①スタティックって結局何なのか？  
+
+[C#初心者のための基礎！staticスタティックの意味と使い方を解説#25](https://anderson02.com/cs/cskiso/cskisoniwari-25/)  
+
+staticはインスタンスを生成しない。  
+staticはプログラム実行時にメモリ領域が確保される。  
+なので、そのアプリケーションにただ1つだけ生成したい時に使用される。  
+staticの用途としては、最初に1回定義したら後は変更されないような情報になるので、データベース接続情報などが適している。  
+
+※インスタンスを生成するということはヒープ領域から領域を拝借するのだから、  
+1回だけということはサイズは決まっているので、おそらくスタック領域に展開されるはず。  
+
+### ②staticクラスのメンバーにthisでアクセスできないのはなぜなのか？  
+
+[staticメソッド内でstaticでないメンバを参照できない理由](https://shirakamisauto.hatenablog.com/entry/2015/06/15/181428)  
+
+thisは自分自身のインスタンスを参照する命令。  
+staticはインスタンスを生成しないのは①でやった通り。  
+インスタンスが存在しないのだから、自分自身のインスタンスにアクセスできるわけがないので、staticクラスでthisは使えない。  
+
+### その他
+
+[staticクラス、staticメソッドの意味と利点](https://teratail.com/questions/174252)  
+インスタンス毎に返す値が違うならstaticでないほうがいいし、Mathのsqrtのように誰がどう計算してもそうなるしかないものはstaticであるほうがいい。  
+なぜならインスタンス毎に挙動が変わって欲しくないし、そういう共通で使う処理は起動時に一回だけメモリに確保して、いつでも使えるようにしたほうが効率がいいし、  
+いちいちnewしてメモリを確保する手間がいらない。  
+
+[わい、static変数とstaticメソッドについて熱く語る](https://qiita.com/Nekonecode/items/19f3a261a8391853ddec)  
 
 ---
 
@@ -307,28 +346,16 @@ SettlementAmount.ToString("N0") → SettlementAmount:N0
 ・会社の健保のあれ注文する。
 令和3年10月12日（火）9時から令和3年10月25日（月）24時まで
 
-
-・ヒートテックがゆるゆるになってきた。そろそろ新しい奴買ったほうがいいだろうか。割と真剣に考えよう。
-　ついでだからパンツも新しくしてもよくないだろうか。
-・サーキュレーター？
-・耳当て？
-
 ・ネットワーク
 ・C# 配列
 ・Javaジェネリック
 ・バニラのWPFで最小のMVVMサンプルを作ってみたい
 ・インスタンスがどうのこうのも調べたい。
-・スタティックって結局何なのかもまとめたい。
-・staticだとthis.でアクセスできないのまとめる。
 
 前のJavaまとめ
 C#配列
 javaジェネリック
 UTF-8,UNICODE,ShiftJis
 
-
 ジェネリックの書き方程度でいい。
 配列はjavaだけ。
-スマホでやる午前はssで対応
-
-
