10月22日会社分

--- a/Trivia/言葉の意味.md
+++ b/Trivia/言葉の意味.md
@@ -9,6 +9,9 @@
 通常、一般的には備わっているにもかかわらず本来あるべき機能・品質・性能・状態が備わっていないこと。  
 特定の売買契約においてその目的物に何らかの欠陥・不具合があることで、その品質や性能が損なわれている状態を指しています。  
 
+・勘当(かんどう)  
+近世以後、親が子との縁を切ること、すなわち懲戒の意味で、親が子を家から追放する行為をさすようになった。親族関係も当然断絶されるわけで、その意味で久離(きゅうり)の一種とも考えられる。事実、江戸町奉行(ぶぎょう)所では、久離を欠落(かけおち)久離、勘当を追出(おいだし)久離とよんで区別するようになった。
+
 ---
 
 ・深謀遠慮(しんぼう-えんりょ)  
