--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -292,13 +292,19 @@ Singletonパターンが適したクラス例
 
 ---
 
-## C# ToString()
+## C# プレースホルダー中におけるToStringFormatの指定
 
 SettlementAmount.ToString("N0") → SettlementAmount:N0  
 に省略できるらしい。便利。  
 
 因みにToStringするときに文字列で指定するこれは、「書式設定」というらしい。  
 そのまんまだね。  
+これはプレースホルダー中で有効な機能なだけだった。
+C#Ver6からの機能みたい。
+
+``` C#
+$"支払額{SettlementAmount:N0}円を人数{TargetPlayerCount}人で均等に割り付けます。{Environment.NewLine}よろしいですか？"
+```
 
 ---
 
@@ -359,3 +365,66 @@ UTF-8,UNICODE,ShiftJis
 
 ジェネリックの書き方程度でいい。
 配列はjavaだけ。
+
+
+残りの時間は、令和3年の午前問題とさらに過去のアルゴリズムとJavaをやる。
+リエントラント、ジェネリックあたりもまとめられたらと思う。
+
+他になんかなかったっけ？
+なんか忘れてる気がする。
+
+プロメトリックの説明は今日中に読む。
+なんならトイレに入っている間に読める内容だった。
+もっかい読み込む。
+→
+オーケー読んだ。そんなに変なことは書いてない。
+筆記用具とか時計とかいらないっぽいけど、ちゃんと持っていくぞ。
+
+
+今日は3年の午前問題を進めることにしましょう。
+
+
+
+            //if (SettlementDetailList
+            //    // 割り勘の伝票IDを取得
+            //    .Select(s => s.SlipList.FirstOrDefault(w => w.SlipType == SlipType.DutchTreat)?.SlipID)
+            //    // 同じ伝票IDはカウントしない。
+            //    .Distinct()
+            //    // nullを除いた結果が2以上なら、別々の割り勘伝票の人をセットしているのでダメ。
+            //    .Count(c => c != null) >= 2)
+            //{
+            //    MessageDialogUtil.ShowWarning(
+            //        Messenger,
+            //        "dame"
+            //    );
+            //    return;
+            //};
+
+
+                var test = SettlementDetailList
+                    .SelectMany(
+                        p => p.SlipList,
+                        (s, slip) => new { s.AccountNo, s.ReservationPlayerName, slip.SlipID }
+                    )
+                    .Where(w => dutchTreatSlipIDList.Contains(w.SlipID))
+                    .GroupBy(
+                        param => param.SlipID,
+                        (k,v) => new
+                        {
+                            key = k,
+                            value = v.FirstOrDefault()
+                        }
+                    )
+                    .Select(s => $"【{s.value.AccountNo}】【{s.value.ReservationPlayerName}】様")
+                    .ToList();
+
+
+                IEnumerable<string> targetPlayerList = SettlementDetailList
+                    .SelectMany(
+                        p => p.SlipList,
+                        (s, slip) => new { s.AccountNo, s.ReservationPlayerName, slip }
+                    )
+                    .Where(w => dutchTreatSlipIDList.Contains(w.slip.SlipID))
+
+                    .Select(s => $"【{s.AccountNo}】【{s.ReservationPlayerName}】様")
+                    .ToList();
