10月23日会社分

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -306,6 +306,8 @@ C#Ver6からの機能みたい。
 $"支払額{SettlementAmount:N0}円を人数{TargetPlayerCount}人で均等に割り付けます。{Environment.NewLine}よろしいですか？"
 ```
 
+[【C#6.0～】文字列補間（$を使った文字列書式設定）](https://imagingsolution.net/program/string_interpolation/)  
+
 ---
 
 ## staticクラスでthisが使えないのはなぜか？
@@ -411,3 +413,76 @@ UTF-8,UNICODE,ShiftJis
 
                     .Select(s => $"【{s.AccountNo}】【{s.ReservationPlayerName}】様")
                     .ToList();
+
+
+・基本情報の勉強をして、抜けていた基本的な部分の学習ができたのはよかった。
+　30だからってやって損はない。スタートダッシュ遅れたのは事実だが、最速で効率よく勉強するなら資格の勉強するのが一番だ。
+〆・プロテインが定期便になってた。公式で買うより安く買えるので、次の定期便に含めることにする。
+→とりあえず、トイレは言っている間にぶち込んでおいた。
+・今日は静かなので集中できるし、ほとんど終わっているので精神的に楽である。
+・布団の中で毛布を横にずらすやり方が結構よい。熱くなったら迷わずこれ。
+・ハリオのガラスの炊飯器がよさげ。
+・今日は1000円分のガソリンを入れておく。27日にがっつり入れる予定。それまでに不安はなくしたい。
+・会社に来る途中の紅葉がきれいだった。今が秋真っ盛りだろう。
+・最近、弁当が冷えるので、昔使っていた弁当の容器にいれた。そしたらめちゃくちゃ臭かったので、ハイターします。
+・容器に入れたら逆に更に冷えたのでいつもどおりがいいみたいですね。
+・そういえば電子レンジの手入れは少し濡れたスポンジでゴシゴシするだけで十分であることが分かりました。
+わざわざハイターしてたのがばからしいですね。
+・昼休みの散歩が当たり前になってきた。日照時間が短くなってきたので日に当たるためと、人と距離を置くため。
+
+・skip,takeをまとめたい。skipの存在を知らなかったからreverse.take.reverseなんてくそ面倒くさいことして実現したのもまとめたい。
+・linqで文字列をjoinするサンプルがわかりずらいので修正したい。
+・javaのジェネリックのまとめをしたい。
+・リエントラントとかのまとめをしたい。
+・隙間時間は、用語集の確認に使いたい。
+・それらがまとめ終わってから令和3年の午前問題の続きをする。
+・昨日やったselectmanyとgroupbyのやつもまとめたい。
+
+
+<https://www.gwtcenter.com/java-generics-primer-1>
+[リエントラント 【reentrant】 再入可能](https://e-words.jp/w/%E3%83%AA%E3%82%A8%E3%83%B3%E3%83%88%E3%83%A9%E3%83%B3%E3%83%88.html)
+[リユーザブル 【reusable】 再使用可能 / 再利用可能](https://e-words.jp/w/%E3%83%AA%E3%83%A6%E3%83%BC%E3%82%B6%E3%83%96%E3%83%AB.html)
+[リロケータブル 【relocatable】 再配置可能](https://e-words.jp/w/%E3%83%AA%E3%83%AD%E3%82%B1%E3%83%BC%E3%82%BF%E3%83%96%E3%83%AB.html)
+[ミューテックス 【mutex】 mutual exclusion](https://e-words.jp/w/%E3%83%9F%E3%83%A5%E3%83%BC%E3%83%86%E3%83%83%E3%82%AF%E3%82%B9.html)
+mutual
+[take,skip](https://symfoware.blog.fc2.com/blog-entry-1927.html)
+
+[selectMany](https://www.urablog.xyz/entry/2018/05/28/070000#SelectMany%E3%82%92%E4%BD%BF%E3%81%86)
+[groupby](https://www.urablog.xyz/entry/2018/07/07/070000)
+[groupbyして先頭](https://entityframework.net/knowledge-base/3850429/get-the-first-record-of-a-group-in-linq-)
+<https://stackoverflow.com/questions/19012986/how-to-get-first-record-in-each-group-using-linq/39932057>
+
+``` C#
+// 呼び出す前のチェック
+// 別の割り勘のグループと一緒にすることはできないので、 開く前にここで塞ぐ。
+IEnumerable<string> dutchTreatSlipIDList = SettlementDetailList
+    // 割り勘の伝票IDを取得
+    .Select(s => s.SlipList.FirstOrDefault(w => w.SlipType == SlipType.DutchTreat)?.SlipID)
+    .Distinct()
+    .Where(w => w != null)
+    .ToList();
+if (dutchTreatSlipIDList.Count() >= 2)
+{
+    IEnumerable<string> targetPlayerList = SettlementDetailList
+        .SelectMany(
+            p => p.SlipList,
+            (s, slip) => (s.AccountNo, s.ReservationPlayerName, slip.SlipID)
+        )
+        .Where(w => dutchTreatSlipIDList.Contains(w.SlipID))
+        .GroupBy(
+            p => p.SlipID,
+            // SlipIDでグループ化したうち、先頭のデータのみ取得する
+            (k, v) => (key: k, value: v.FirstOrDefault())
+        )
+        .Select(s => $"【{s.value.AccountNo}】【{s.value.ReservationPlayerName}】様")
+        .ToList();
+    var msg = string.Join(" と ", targetPlayerList) + " はそれぞれで既に割り勘済みのため、割り勘を開くことができません。";
+    MessageDialogUtil.ShowWarning(Messenger, msg);
+    return;
+}
+```
+
+[C# LINQで特定の値を先頭にして並び替え](https://teratail.com/questions/120228)  
+
+sql インデックス 仕組み
+[インデックスとは？仕組みをわかりやすく解説](https://products.sint.co.jp/siob/blog/index)
