--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -99,10 +99,17 @@ ORマッパーとはなにか？
 思えば、PHP,JavaScript,TypeScriptの文法がわからない。
 基本的なところを改めてまとめたい。  
 
-・シングルトン
-
 ・ハッシュとは？
 一方通行の関数ではなく
+
+・クイックソート計算量のnlog nの頭のnってなによ？
+・構造体のnewの仕方？
+・総称型って結局なんなの？
+
+・コンストラクタの中でthis使うと他のコンストラクタの指定になるのはC#も同じなのか調べたい。
+→ちゃんとコンストラクタにおけるthisはあるけど、Javaでの使い方とはちょっと違ってるっぽい。
+
+
 
 ---
 
@@ -151,3 +158,19 @@ IPアドレスに関してはクラス分けとプライベートの範囲さえ
 →  
 ビルドするときに、あれやってこれやってってのを登録するプログラム。  
 ビルド自動化の命令を記述したファイル。  
+
+〆・リエントラントとかのまとめをしたい。
+
+〆・絶対値→符号を排除した数字の大きさそのもの
+〆・ダウンキャストとアップキャスト
+△・PC構成要素をまとめたい
+〆・LRU
+〆・C#のスプレッド展開みたいなやつ
+→範囲アクセスなるものらしい。C#の基礎にまとめる。
+〆・マニフェストファイルの意味とは？
+〆・staticについてもまとめたい。
+→とりあえずざっくりとしたイメージだけはつかんだ
+〆・interfaceのnewは前にまとめたのか調べたい。
+→やってた。東さんが不思議がっていたということは基礎ができていない部分があるということか。
+
+〆・シングルトン
