--- a/BasicInformation/とにかく.md
+++ b/BasicInformation/とにかく.md
@@ -1128,15 +1128,87 @@ Very Longまでは覚えられたのだが。
 
 ---
 
-## リエントラント(Reentrant，再入可能)、リユーザブル(Reusable，再使用可能)、リロケータブル(Relocation，再配置可能)
-
-リカーシブは飛ばすぞ。
+## 再入可能・再帰的・再使用可能・再配置可能
 
 [再入可能・再帰的・再使用可能・再配置可能について調べる](https://snofra.hatenablog.com/entry/2018/09/06/004527)  
 
+### リエントラント(Reentrant，再入可能)
+
+``` txt
+プログラムやサブルーチンが実行中に割り込まれ、その実行が完了する前に再び呼び出され実行されても安全だという性質を指す。
+割り込みは分岐や呼び出しなどの内部的な動きによって生じる場合もあるし、ハードウェア割り込みやシグナルなどの外部の動きによって生じる場合もある。
+割り込んでの呼び出しが完了すれば、割り込まれた呼び出しが実行を継続できる。
+
+直接または間接に再帰可能なサブルーチンはリエントラントである。
+しかし、グローバル変数が処理の流れの中でしか変化しないことを前提としているサブルーチンはリエントラントではない。
+```
+
+これが一番重要かな。
+自分が作っているプログラムで考える。
+共通処理はサブルーチンとしてまとめる。
+色々なところから呼び出されるけど、呼び出し元によって1と返したり2と返したりしては元も子もないわけで、そういうのがなく、必ず1を返すってのが歳入可能。
+
+結果が変わらないという性質から、再帰可能であるということは歳入可能であるとも言える。
+また、並列処理という文言があった場合も歳入可能の場合が多い。
+なぜなら、同時に呼び出しても値が変わらないので、歳入可能の性質そのままだからだ。
+
+``` txt
+再入可能の3原則
+・リエントラントなコードは、静的変数やグローバル変数を保持しない。
+・リエントラントなコードは自分のコードを書き換えない。
+・リエントラントなコードは、リエントラントでないプログラムやサブルーチンを呼び出さない。
+ということは再帰可能＝再入可能と言える。
+```
+
+### リユーザブル(Reusable，再使用可能)
+
+``` txt
+プログラムはメモリに格納されて処理される。処理が終わるとメモリから解放される。  
+サブルーチンはメモリに毎回格納して解放するのは無駄なので、メモリに確保したままで複数のプログラムから使えるべき。
+それが可能なのが再使用可能。  
+```
+
+まんまやな。要はstaticでは？
+
+再利用可能ということは再入可能で、再帰的である。
+メモリを確保したままで複数のプログラムから使えないパターンもある。
+それは逐次再利用可能の場合。
+逐次なので、1つ使っている間は他は使えない。
+なので、逐次再利用可能であるならば、再入可能ではない。
+
+こいつが話を一番ややこしくする。
+とりあえず、逐次ってなったらあらゆるものがダメになるって考えてよい。
+×再使用可能
+×再帰可能
+再配置可能は良い模様。
+
+というか、逐次再使用可能というのは、再入可能ではない場合にそうなる見たい。
+どちらが先かというよりは、お互い依存しているので、どちらかが倒れたもう駄目って感じかな。
+
+リユーザブル 【reusable】 再使用可能 / 再利用可能
+リユーザブルとは、「再使用・再利用できる」という意味の英単語。一般の外来語としては、器具や装置などが何度も繰り返し使えるようにできていることを意味する。
+対義語は「ディスポーザブル」（disposable：使い捨て可能）。
+
+へー。
+リユーザブルがディスポーザブルと対義語になっていたのが一番の衝撃だった。
+
+### リロケータブル(Relocation，再配置可能)
+
+``` txt
+再使用の手前の話。
+プログラムをメモリに格納するときに、メモリのアドレス空間のどこに置くのかっていう話がある。
+メモリアドレスAではうまく処理されるけど、足し算するためにメモリアドレスAからメモリアドレスBに移動したときにコンパイルエラーになる。
+でもメモリアドレスCでは大丈夫、みたいなのではプログラムとしての安全性に欠ける。
+そのため、どこのメモリに配置してもうまく動くよねっいうのを担保する必要がある。  
+```
+
+こいつは全てに絡んでいる。
+これがダメなら他も全部だめだ。
+故に一番存在感がない。なぜなら当たり前だからだ。
+
 ### 最後に問題
 
-**応用情報技術者平成28年春期 午前問7**
+**応用情報技術者平成28年春期 午前問7**  
 リアルタイムシステムにおいて，複数のタスクから並行して呼び出された場合に，同時に実行する必要がある共用ライブラリのプログラムに要求される性質はどれか。
 
 →
@@ -1159,7 +1231,7 @@ Very Longまでは覚えられたのだが。
 共用ライブラリは、1つのプログラムを複数のプロセスが共用する前提で作られます。特にリアルタイムシステムにおいては、他のプロセスがライブラリを解放するのを待つようでは処理が遅延し、システムとして致命的となるため「リエントラント(再入可能)」なプログラム構造である必要があります。
 
 
-**応用情報技術者平成29年春期 午前問7**
+**応用情報技術者平成29年春期 午前問7**  
 プログラムの特性に関する記述のうち，適切なものはどれか。
 
 再帰的プログラムは，手続の中でそれ自体を呼び出すプログラムであり，再入可能である。
@@ -1199,4 +1271,46 @@ Very Longまでは覚えられたのだが。
 
 ---
 
-ACID特性
+## ACID特性
+
+午前問題にしか出てこないし、答えがそろえばなんとなくわかるレベルの話ではあるが、一応ね。
+
+まず、勉強する前に書き出してみるか。
+
+A Atomicity 原子性
+実行されたかされないかの2つの状態しか持たないこと
+
+C
+
+I Integrity 完全性
+
+実行された結果はいかなる自体になっても変わらないこと。
+
+D Durability 耐久性
+
+障害が発生したとしても値が変化することはないこと。影響を受けないこと。
+
+cが思い出せない。
+さて、復習と行きますか。
+よく見たらIも間違っている。恐ろしい。
+Integrityはセキュリティのほうだな。セキュリティの3要素。ただの要素か。  
+
+[おっさんがACIDとかBASEとかまとめておく。](https://qiita.com/suziq99999/items/2e7037042b31a77b19c8)  
+
+ACID特性はデータベースのトランザクション処理が持つべき性質の頭文字を取ったもの。  
+データベースの持つべき特性ではなく、トランザクションに対する特性なのに注意かな。  
+
+1．Atomicity（原子性）  
+2．Consistency（一貫性）  
+3．Isolation（独立性）  
+4．Durability（永続性）  
+
+イメージはSQLを実行して完了するまでと思っえばいいだろう。  
+最後のDについては死ぬまでの話になるけど、まぁね。  
+
+結果が確定されたかされないか、2つに1つしかない事。これは問題ない。  
+結果に一貫性(整合性)はあるか？100と打って120になるような事はないか？
+実行している間、他から影響を受けることも与えることもないか？トランザクション中に突然100が120に変わることはないか？
+実行された結果が変わることはないか？障害が発生しても値が変わることはないか？100は100のままか？突然120になることはないか？
+
+自分で書いてて思ったけど要はそういう事では？
