--- a/BasicInformation/午前/令和3年秋期.md
+++ b/BasicInformation/午前/令和3年秋期.md
@@ -154,8 +154,315 @@ x/y = x÷y
 今日やったから覚えてる。  
 てか、この問題平成23年からの焼き増しなのか。  
 
+---
 
-応用の情報も平気で出るから疲れる。  
-そうだ。
-まぁ、午前の問題を進めるのもいいけど、まとめたいと思っていた奴をまとめることにしたらすっきりするんじゃないかなー。
+15 ア○
 
+フェールセーフの説明はボーナスでしょ。
+
+---
+
+16 イ○
+
+順繰り解くしかない。
+0.9としよう。
+
+A
+1-0.9 = 0.1
+0.01
+0.99
+
+B
+0.9 * 0.99 = 0.891
+
+ 81
+81
+891
+
+C
+1-0.81 = 0.19
+0.19 * 0.19 = 0.0361
+1-0.0361 = 0.9639
+
+なのでACB
+
+---
+
+17 エ×→ア
+
+TPSって何や。
+TeraflopsPerSeconds?
+TransactionPerSecondsかも。
+
+(2) cpu 1ms / 1trn
+(3) データベース 2ms / 1trn
+(4) Web 70%, DB 80%
+(5) 独立なのでなんだ？掛けるでおけ？
+
+webサーバーは1秒で1000トランザクションを処理できる。
+DBサーバーは1秒で500トランザクションを処理できる。
+で、それぞれ70と80なので、
+700トランザクションと400トランザクション。
+選択肢的に1100しかない。
+
+正解は400だって。
+確立の独立となんちゃらも復習しておいたほうがいいかもなぁ。
+確立の話ではないけど、従属と独立の概念的な奴はまとめたい。  
+
+(5)より、「トランザクション処理はCPU時間だけに依存し、Webサーバーとデータベースサーバーはお互いに独立して処理を行う」  
+「このシステムでは最大何TPS処理できるか」  
+1トランザクション数が遅いほうを基にするらしい。なのでDB側の400が採用されるんだって。  
+
+→
+TPS(Transaction Per Second)は、システムが1秒間に処理できるトランザクション数を表す単位です。
+
+Webサーバでは１トランザクション当たり1ミリ秒のCPU時間を使用するので、1秒間で最大1000トランザクションを処理できることになります。
+しかし問題文にはCPU使用率の条件が設定されており、これによりWebサーバのCPU使用時間は1秒間に最大で700ミリ秒に制約されます。
+したがってWebサーバのTPSは700になります。
+
+データベースサーバも同様に使用率の上限が80%なので、CPU使用時間は1秒間に最大で800ミリ秒に制約されます。
+1トランザクション当たりのCPU使用時間は、
+　10データブロック×0.2ミリ秒＝2ミリ秒
+
+最大CPU使用時間を1トランザクションあたりのCPU時間で割ると、
+　800÷2＝400
+
+したがってデータベースサーバのTPSは400になります。
+
+WebサーバのTPSが700，データベースサーバが400なので比較したときに少ない400TPSがシステム全体として処理可能なトランザクション数となります。
+
+→
+あー、トランザクションはWebサーバーを経由してデータベースサーバーで実行されるってあるから、いくらWebサーバーの数値が出ようとも、結局はデータベース次第何だ。
+独立だの何だのは関係ないっぽい。  
+
+---
+
+18 ウ ○
+
+多分コピーレフト。  
+コピーライトだから左の意味でレフトって小話しか覚えてないので、改めてまとめたい。  
+
+「著作権を保持したまま、プログラムの複製や改変、再配布を制限せず、そのプログラムから派生した2次著作物(派生物)には、オリジナルと同じ配布条件を適応する」
+
+・著作権は持ってる。
+・でも改変や再配布はできる。
+・でもって、作ったものには元と同じ配布条件を適応する。
+
+作ったのは俺だぞ！！！ってのは言いたい人向けなのかね。
+
+コピーライトはがちがちの著作物なので、複製はだめ。
+コピー・複写(copy)と権利(right)を合わせた言葉で、著作権や複製権を意味します。
+
+---
+
+19 エ ○
+
+1    5    6
+ 2    2  2
+  3    1
+   4    3
+
+5です。
+
+---
+
+20 エ ○
+
+RFIDについて特にいうことはない。
+
+---
+
+21 ア ○
+
+3入力多数決回路はANDとORの組み合わせって覚えてしまった。  
+
+---
+
+22 ウ ○
+
+SRAMよりもDRAMが安いのは、構造が単純だから。
+
+---
+
+23 エ ○
+
+Webサイトの今どこにいるか。
+
+---
+
+24 エ ○
+
+テクスチャマッピング
+
+---
+
+25 ウ ○
+
+正規化の目的は冗長性の排除。
+
+データの重複(冗長性)の排除
+データ操作に伴う影響範囲の限定
+→データ項目のグループ化を行い、属性間の依存関係を極小化する。
+
+地味に危なかった。
+
+---
+
+26 ア○
+
+共有ロック中に共有ロックだけOKです。
+
+---
+
+27 エ○
+
+EXIST句は相関福問い合わせ有りきなので、内部で親クエリを使ってる奴が正解です。
+単品で使うと存在するかしないかのT,Fしか返さないので全部TrueになるかFalseになるかの落ちしかなくなる。
+
+---
+
+28 イ○
+
+やったばっかり。
+0か1かは原子性です。
+
+---
+
+29 ア×→イ
+
+多重度だ・・・。
+かーー。また間違えた。
+
+---
+
+30 エ○
+
+初めての問題だが、ping一択だろう。
+
+---
+
+31 エ○
+
+SSHがあれば完璧だが、ないなら多分TELNET
+当たった。もうセキュリティ的に使われることはないみたい。
+
+---
+
+32 ウ×→エ
+
+すげーな。ネスペの問題まで出るのか。
+わからんのだが。
+でも、一番あり得るのはウしかないような気もするなぁ。
+
+エなんだ。
+
+ルーターからの情報によって自分のIPアドレスを自動背っていできる模様。
+
+IPv4射影アドレスは上位96ビットが全部1ではなく、
+上位80ビットが全部0で81~96が全部1で残りの32ビットがIPv4アドレスになるらしい。
+正直、基本情報でIPv6まで出るほうが稀なので、これは気にしなくていいかも。  
+
+---
+
+33 ウ○
+
+アドレス変換なのでNAPT
+
+---
+
+34 イ○
+
+ブロードキャストは全部1だった気がするので255のエ
+32ビット。
+28なので、残り4ビット。
+192は？→1100 0000
+
+下位4ビットが全部1の場合、1,2,4,8=15
+192 + 15 = 207
+
+一回間違えたけど、これは間違える問題ではない。
+
+---
+
+35 ア○
+
+情報の完全性なので、改ざんに対する防御では？
+完全性は情報の正確性や完成さを保障する度合いなので、改ざんで合ってるっぽい。
+
+---
+
+36
+
+---
+
+37
+
+---
+
+38
+
+---
+
+39
+
+---
+
+40
+
+---
+
+41
+
+---
+
+42
+
+---
+
+43
+
+---
+
+44
+
+---
+
+45
+
+---
+
+46
+
+---
+
+47
+
+---
+
+48
+
+---
+
+49
+
+---
+
+50
+
+---
+
+
+---
+
+基数変換部分は毎回迷うのでパターンを覚えてしまったほうがいいかも。
+基礎理論がちょっと弱いかな。
+
+
+米の移し替えが完了した。
+何粒か無駄にしてしまった。申し訳ない。
+
+筋トレ、独立事象、Java配列
+なんか、余裕なくなってきたな。
+筋トレはどうしようかねぇ。
+やるなら今しかない。
+これ以上は時間がなくなってしまう。
