--- a/English/その他英単語.md
+++ b/English/その他英単語.md
@@ -1,10 +1,22 @@
 # その他英単語
 
-tight
+・tight
 ［名・形動］
 １ きついこと。かたくしっかりしていること。ぴったりと密着していること。また、そのさま。「タイトな結び目」「タイトなスーツ」
 ２ 商品の需要供給の関係が逼迫(ひっぱく)していること。品薄なこと。また、そのさま。「需給がタイトに推移する」
 ３ 「タイトスカート」の略。
+
+
+・reception
+レセプション
+歓迎会・招待会
+
+
+・redemption
+リデンプション
+買い戻し。償還(返済する事らしい)。救済。
+LOLのリデンプションは救済って意味だろうな。
+あれサポアイテムだったよな。
 
 ## 趣味
 
