--- a/Math/とりあえず.md
+++ b/Math/とりあえず.md
@@ -98,10 +98,42 @@ x = -30
 
 ## 絶対値(Absolute)
 
-・その符号を無視して得られる非負の値。
-・プラスでもマイナスでもなく、数そのもの。
-・実数から符号を取り除いたもの。
+・その符号を無視して得られる非負の値。  
+・プラスでもマイナスでもなく、数そのもの。  
+・実数から符号を取り除いたもの。  
 
-数直線上で考えた場合
-・原点0からの距離をあらわす値。
+数直線上で考えた場合  
+・原点0からの距離をあらわす値。  
 ・絶対値は距離、符号は方向。  
+
+---
+
+## 従属事象と独立事象
+
+まぁコピペで済む話ではあるのだが。  
+
+平成23年春季 午前問19  
+Webサーバとデータベースサーバ各1台で構成されているシステムがある。次の運用条件の場合，このシステムでは最大何TPS処理できるか。ここで，各サーバのCPUは，1個とする。  
+(5) : トランザクション処理は，CPU時間だけに依存し，Webサーバとデータベースサーバは互いに独立して処理を行うものとする。  
+
+この問題に端を発して調べる事になった。  
+
+結局あまり関係はなかったけど、適当に探して読んだ記事だけで「おー」ってなったのでまとめることにした。  
+確立関係は弱いし、独立ともう一個なんかで何が違うのかもあいまいなのでね。  
+
+**従属事象**
+二つの事象について、一方がおこるかおこらないかによって他方のおこる確率の値が変わるとき、両者は互いに従属である、または従属事象であるという。
+
+6個の白球と4個の赤球が入っている袋の中から，引続いて2つの球を取出すとすると，第1球が白球で，第2が赤球になる確率は，次のようになる。
+第1球が白球になる確率は 6/10 ，第2球が赤球になる確率は，袋の中には5個の白球と4個の赤球が残っているから，4/9 である。
+それゆえ，第1球が白球で第2球が赤球になる確率は (6/10)×(4/9)＝4/15 である。
+ここで，第1球が赤球のとき第2球も赤球になる確率を計算してみると，上と同様にして，その確率は 3/9 になることがわかる。
+この例をみると，白球が最初に出るか出ないかで，次に赤球の出る確率が変化している。
+このように，2つの事象A ，B があって，ある事象Aが起ったかどうかが，B の起る確率に影響するとき，B はA の**従属事象**であるという。
+
+**独立事象**
+二つの事象について、一方がおこるかおこらないかによって他方のおこる確率が変わらないとき、両者は互いに独立である、または独立事象であるという。
+
+上記の例を引用し、これに対して，もし最初に取出した球が白，赤いずれであっても，これを袋に戻してから，第2球を取出すことにすると，
+第1球が白球で第2球が赤球になる確率，第1球が赤球で第2球が赤球になる確率はともに，赤球を取出す確率に等しくなる。
+これは，ある事象A が起ったかどうかが，B の起る確率に影響していないことを示している。このような場合，BはAの**独立事象**という。
