--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -45,12 +45,6 @@ https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 人に頼らず、自分で学ぶとはそういうことだぞ。
 
 
-
-・abstractを実装したクラスの動きとは？参照はどうなる？
-・アップキャストとダウンキャスト
-・継承、実装関係が弱すぎる。
-
-
 1時間で標準入力からじゃんけんプログラムを作れ。
 30分でfizzbuzz問題を作れ。
 オブジェクト指向とは何かを初心者でもわかるように説明しなさい。
@@ -104,12 +98,6 @@ ORマッパーとはなにか？
 
 ・クイックソート計算量のnlog nの頭のnってなによ？
 ・構造体のnewの仕方？
-・総称型って結局なんなの？
-
-・コンストラクタの中でthis使うと他のコンストラクタの指定になるのはC#も同じなのか調べたい。
-→ちゃんとコンストラクタにおけるthisはあるけど、Javaでの使い方とはちょっと違ってるっぽい。
-
-
 
 ---
 
@@ -167,10 +155,25 @@ IPアドレスに関してはクラス分けとプライベートの範囲さえ
 〆・LRU
 〆・C#のスプレッド展開みたいなやつ
 →範囲アクセスなるものらしい。C#の基礎にまとめる。
+
 〆・マニフェストファイルの意味とは？
+→そのアプリケーションについての情報が全て入ったファイル。構成ファイル情報とか全部乗ってるっぽい。
+
 〆・staticについてもまとめたい。
 →とりあえずざっくりとしたイメージだけはつかんだ
 〆・interfaceのnewは前にまとめたのか調べたい。
 →やってた。東さんが不思議がっていたということは基礎ができていない部分があるということか。
 
 〆・シングルトン
+〆・javaジェネリック
+〆・総称型って結局なんなの？
+
+〆・abstractを実装したクラスの動きとは？参照はどうなる？
+〆・アップキャストとダウンキャスト
+継承、実装関係が弱すぎる。
+
+〆・インスタンスがどうのこうのも調べたい。
+
+〆・コンストラクタの中でthis使うと他のコンストラクタの指定になるのはC#も同じなのか調べたい。
+→ちゃんとコンストラクタにおけるthisはあるけど、Javaでの使い方とはちょっと違ってるっぽい。
+
