10月25日会社分

--- a/Programming/メモ.md
+++ b/Programming/メモ.md
@@ -8,7 +8,7 @@
 
 ### とりあえず定義
 
-[オブジェクト指向プログラミング ](https://e-words.jp/w/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0.html)  
+[オブジェクト指向プログラミング](https://e-words.jp/w/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0.html)  
 
 ``` txt
 オブジェクト指向プログラミングとは、コンピュータプログラムの構造、構成法の一つで、関連するデータの集合体と、それを操作する手続きを「オブジェクト」（object）と呼ばれるひとまとまりの単位として一体化し、オブジェクトの組み合わせとしてプログラムを記述する手法。
@@ -32,3 +32,39 @@
 
 ・データと手続きをクラス(若しくはオブジェクト)にまとめる  
 ・まとめた物を他のまとめた物(オブジェクト)と組み合わせてプログラムしていく  
+
+---
+
+## staticクラスでthisが使えないのはなぜか？
+
+①スタティックって結局何なのか？  
+②staticクラスのメンバーにthisでアクセスできないのはなぜなのか？  
+
+### ①スタティックって結局何なのか？  
+
+[C#初心者のための基礎！staticスタティックの意味と使い方を解説#25](https://anderson02.com/cs/cskiso/cskisoniwari-25/)  
+
+staticはインスタンスを生成しない。  
+staticはプログラム実行時にメモリ領域が確保される。  
+なので、そのアプリケーションにただ1つだけ生成したい時に使用される。  
+staticの用途としては、最初に1回定義したら後は変更されないような情報になるので、データベース接続情報などが適している。  
+
+※インスタンスを生成するということはヒープ領域から領域を拝借するのだから、  
+1回だけということはサイズは決まっているので、おそらくスタック領域に展開されるはず。  
+
+### ②staticクラスのメンバーにthisでアクセスできないのはなぜなのか？  
+
+[staticメソッド内でstaticでないメンバを参照できない理由](https://shirakamisauto.hatenablog.com/entry/2015/06/15/181428)  
+
+thisは自分自身のインスタンスを参照する命令。  
+staticはインスタンスを生成しないのは①でやった通り。  
+インスタンスが存在しないのだから、自分自身のインスタンスにアクセスできるわけがないので、staticクラスでthisは使えない。  
+
+### その他
+
+[staticクラス、staticメソッドの意味と利点](https://teratail.com/questions/174252)  
+インスタンス毎に返す値が違うならstaticでないほうがいいし、Mathのsqrtのように誰がどう計算してもそうなるしかないものはstaticであるほうがいい。  
+なぜならインスタンス毎に挙動が変わって欲しくないし、そういう共通で使う処理は起動時に一回だけメモリに確保して、いつでも使えるようにしたほうが効率がいいし、  
+いちいちnewしてメモリを確保する手間がいらない。  
+
+[わい、static変数とstaticメソッドについて熱く語る](https://qiita.com/Nekonecode/items/19f3a261a8391853ddec)  
