--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -70,8 +70,6 @@ ORマッパーとはなにか？
 →
 やっぱりまだまだダメですね。
 
-・午前問題の抜けている問題をやっておきたい。
-
 ・インデクサーまとめ
 
 ・エバノの勉強記事をtilに映す
@@ -79,14 +77,10 @@ ORマッパーとはなにか？
 ・memoだと何のメモだかわからないのでちゃんと名前を付ける。
 後でまとめる用のメモも作って、そうじゃない奴はちゃんと名前を付ける。
 
-
 ・DB制約まとめ
 ・ロックのまとめ
 
-
 ・スイッチは第何層で動く装置だったか。
-
-・プライベートとグローバルを覚えたい。
 
 ・80 70
 
@@ -98,6 +92,30 @@ ORマッパーとはなにか？
 
 ・クイックソート計算量のnlog nの頭のnってなによ？
 ・構造体のnewの仕方？
+
+・ネットワーク
+・C# 配列
+・バニラのWPFで最小のMVVMサンプルを作ってみたい
+・UTF-8,UNICODE,ShiftJis
+・配列はjavaだけ。
+
+
+・skip,takeをまとめたい。skipの存在を知らなかったからreverse.take.reverseなんてくそ面倒くさいことして実現したのもまとめたい。
+・linqで文字列をjoinするサンプルがわかりずらいので修正したい。
+
+
+・隙間時間は、用語集の確認に使いたい。
+・それらがまとめ終わってから令和3年の午前問題の続きをする。
+・昨日やったselectmanyとgroupbyのやつもまとめたい。
+
+
+sql インデックス 仕組み
+[インデックスとは？仕組みをわかりやすく解説](https://products.sint.co.jp/siob/blog/index)
+
+sql where 仕組み
+[SELECT文の処理の仕組みを説明してみた。](https://nattou-curry-2.hatenadiary.org/entry/20090315/1237089749)
+
+[Dispose の意味が未だわからないのですが](https://atmarkit.itmedia.co.jp/bbs/phpBB/viewtopic.php?topic=34497&forum=7)  
 
 ---
 
@@ -177,3 +195,10 @@ IPアドレスに関してはクラス分けとプライベートの範囲さえ
 〆・コンストラクタの中でthis使うと他のコンストラクタの指定になるのはC#も同じなのか調べたい。
 →ちゃんとコンストラクタにおけるthisはあるけど、Javaでの使い方とはちょっと違ってるっぽい。
 
+〆・プライベートIPアドレスとグローバルIPアドレスを覚えたい。
+クラスCは192.168.0.0~192.168.255.255
+クラスBは172.16.0.0~172.31.0.0まで
+Aは知らんがCが2桁。B が3桁対象なので、Aは4桁まで対応だと思う。10.0.0.0 ~ 255.255.255.255だっけ？
+10.0.0.0~10.255.255.255だった。
+
+〆・午前問題の抜けている問題をやっておきたい。
