--- a/BasicInformation/午前/令和3年秋期.md
+++ b/BasicInformation/午前/令和3年秋期.md
@@ -2,6 +2,7 @@
 
 01 エ×→イ
 
+``` math
 128
 1000 0000
 8 0
@@ -14,6 +15,7 @@
 1/8 * 16 = 2
 
 16^-2 * 2 = 1 / 128
+```
 
 ---
 
@@ -28,12 +30,15 @@
 
 ---
 
-03
+03 ウ×→エ
 
 カルノー図の奴。
 やったことはあるがどうやったか忘れてしまった。
 
 A_B_C_D_ * A_B_C_D
+完璧に忘れたので間違えでいいや。
+でも、とりあえず当てずっぽうでやってみるか。
+でもよく見ると、BDとは分断されてるよな。
 
 ---
 
@@ -139,7 +144,7 @@ x/y = x÷y
 
 12 ウ ○
 
-2000 * 1600 = 3200 * 10^3 = 3.2 * 10^6
+$2000 *1600=3200* 10^3 = 3.2 * 10^6$
 
 ---
 
@@ -391,78 +396,446 @@ IPv4射影アドレスは上位96ビットが全部1ではなく、
 
 ---
 
-36
+36 イ ×→エ
+
+紛失したICカードの執行処理は絶対に必要だよな。
+まじか・・・。
+
+PIN(Personal Indentification Number)
+クレカの暗証番号。4桁のあれね。
+
+俺の選択肢は紛失してから発行されるまでの間に危ないからダメなんだって。
+パスと別に送るのが正解だって。
+PPAP推奨かよ。
 
 ---
 
-37
+37 ウ ○
+
+選択肢が貧弱すぎる。貧弱ぅ。
+因みにスパイウェアは「利用者の意図に反してPCにインストールされ、利用者の個人情報やアクセス履歴等の情報を収集するプログラム」だそうです。
+まぁ、スパイってつくくらいだから情報収集系なんだろうなぁと。
 
 ---
 
-38
+38 ア ○
+
+WAF
 
 ---
 
-39
+39 ウ ○
+
+デジタル署名
 
 ---
 
-40
+40 ウ ○
 
 ---
 
-41
+41 ア ○
+
+SQLインジェクション
 
 ---
 
-42
+42 ア ○
+
+ブルートフォース
 
 ---
 
-43
+43 イ ○
+
+悪いことするのはrootkitしかない。
+37問目からのセキュリティ関係は簡単すぎる。
+ボーナスステージだ。
 
 ---
 
-44
+44 ウ ○
+
+SaaSは既にあるソフトウェアを利用するので新しく作る必要はないわな。
 
 ---
 
-45
+45 ア ○
+
+値渡しの話だろうけど、平成24年だからか表現が古い。
+値呼び出しなんて聞いたことないけど、値系はこれしかないからこれで。
 
 ---
 
-46
+46 エ ○
+
+カプセル化は外部からの隠ぺいです。
 
 ---
 
-47
+47 エ ○
+
+本稼働中のデータベースから抜き出すのだからリバースしかない。
 
 ---
 
-48
+48 ア ○
+
+命令網羅って一番緩くなかった？
+1回でも通ればいいはずだから、
+A=0,b=0
+a=1,b=1
+
+2だな。
 
 ---
 
-49
+49 ア ○
+
+条件を調べるときってアサーションってイメージがあるけどどうだろう。
+合ってた。
 
 ---
 
-50
+50 イ ○
+
+構成管理。手順や仕様って事か？
+だとしたら1つはドンピシャなのだが、他があいまいだな。
+イだけ異質？
+単体テストレベルのバグが多発して、開発が予定通り進捗しないってどこに構成管理要素があるのだろうか？
+合ってた。
 
 ---
 
+51 イ○
+
+クリティカルパス
 
 ---
+
+52 ウ○
+
+ファンクションポイント法は確か、画面の項目数とかそういう要素に重みを付けて見積もる手法だった気がする。
+
+---
+
+53 エ○
+
+``` math
+30 * 0.4 = 12
+40 * 0.9 = 36
+20 * 1.0 = 20
+10 * 1.2 = 12
+
+80 + 5 * 1.2 = 102?
+85 * 0.2 = 17
+```
+
+---
+
+54 ア○
+
+COCOMOがなんだか忘れてしまったが、なんだか経験則の奴だった気がするので、ガッツリ経験しか語っていないアで言ってみますか。
+まさか合っているとは・・・。
+今の内にまとめておくか。
+
+COCOMO (COnstructive COst MOdel)
+
+ソースコードの想定行数を基に、プログラマのスキルや再利用コード量などの様々な要因から開発規模を見積もり、補正係数を掛け合わせて工数とそれに伴う工期を見積もる。
+自社に置ける生産性に関するデータの収集が必要。
+やっぱり経験則じゃないか。
+
+constructive
+形容詞
+建築的な
+
+constructor
+可算名詞
+建設者
+
+---
+
+55 ア○
+
+選択肢が貧弱過ぎる。
+見ればわかるレベル。なので特に梨。
+システム運用なので、フェールセーフかセールソフトかどれかみたいな問題です。
+
+---
+
+56 ウ○
+
+可用性KPI保守性
+回復が早かったら強い。
+
+---
+
+57 ウ○
+
+A 60 18 18 65 = 96 65
+B 60 15 12 85 = 87 85
+C 45 15 18 75 = 78 75
+D 45 15 12 85 = 72 85
+
+---
+
+58 ウ×→ア
+
+請負契約→完成させる
+準委任契約→仕事するのが仕事
+
+違った。
+
+請負契約
+委託者から一定の作業範囲を請け負う契約。
+受託者は請け負った作業内容を完遂する責任を負う。
+請負では、委託者と労働者の間に指揮命令関係は生じない。
+
+ん？これ派遣に関する問題だったりした？
+言いたいのは、指揮命令関係に関する事なのか？
+
+俺が選んだのは「外部委託で開発した業務システムの品質管理状況は、委託側で監査する必要はなく、受託側で監査すべきである。」
+だけど、よく見てみると、そんなことしたら品質やベー状態で収めてもおｋってことになっちゃうよな。
+有りえん
+
+「請負契約においては、委託側の事務所で作業を行っている受託側要員のシステムへのアクセス管理が妥当かどうかを委託側が監査できるように定める。」
+これはつまり、仕事をお願いした会社のオフィスで仕事を受けた会社の人間が作業する時、システムへのアクセスに問題がないか監査しろっていってるのか。
+うん。至極全うだな。
+委託者、受託者で煙に巻いてるだけか。
+
+---
+
+59 イ○
+
+なんかアンケートでもするんじゃなかったでしたっけ？
+あってるっぽい。
+
+---
+
+60 エ○
+
+命令はダメ。やんわりいうくらいしか出来ない無能。
+
+---
+
+61 エ○
+
+SOA
+
+---
+
+62 イ○
+
+非機能要件は、ハードウェアだったり、そういうやつです。
+品質とかもそうだっけか？
+だとしたら1つしかないな。
+
+非機能要件
+システムの性能、信頼性、操作性、効率性、保守性、セキュリティ。
+
+機能要件
+操作方法、画面表示、データ種類、処理内容、出力帳票。
+
+---
+
+63 イ○
+
+あぁ。これか。
+
+5 3 = 15 15
+8 0 = 0 24
+12 1 = 12 36
+
+27 / 75
+0.36
+
+225
+ 455
+
+---
+
+64 ウ○
+
+CSR調達
+社会、会社、責任
+
+---
+
+65 イ○
+
+システム化計画の立案プロセス。
+考慮すべきは？
+立案する時に気を付ける事って何？
+システム化するってことは、それをする価値がないと意味がないわけで、費用と投資効果を明確にする事じゃないかなーって思うんですけどどうでしょうか。
+
+合ってた。
+
+システム化計画
+システム化の基本方針を立案し、対象業務を分析して、開発順序やコスト、効果等のシステムかの全体を明らかにする。
+
+あくまで方針を示すだけなのね。
+後は、開発の順序とコストを考えるのもここか。
+
+---
+
+66 エ○
+
+4Pはさっぱりだったけどすっかり覚えてしまった。
+製品は価値
+価格は負担
+場所は利便性
+販売促進はコミュニケーション
+
+---
+
+67 ア○
+
+CRM Customer Relationsip Management
+顧客といい感じにやるやつ。
+な、はずなので、顧客ってついてる奴が答えです。
+
+---
+
+68 イ○
+
+ベンチマークって事は比較の基準なわけですよ。
+だから比べるってあるやつが正解です。
+
+---
+
+69 ア○
+
+デジタルディバイド
+デジタル分断
+
+---
+
+70 エ○
+
+在庫とか必要量とかそういうのはMRPです。
+Material R???????? Planning
+
+Requirements
+資材所要量計画。
+生産に必要な資材の正味所要量を求めて、品目、納期と合わせて生産計画を作る。
+
+---
+
+71 ア○
+
+知識の共有。内はできてないね。属人化してる。
+
+---
+
+72 ウ○
+
+CGM
+ユーチューバー
+
+---
+
+73 エ○
+
+3000円なら0個
+1000円なら6万個
+1500円なら？
+4万5千。なんでかは知らん。答えだけ覚えてる。
+
+3000x + y = 0
+1000x + y = 60000
+
+3000x + 60000 - 1000x = 0
+2000x = -60000
+x = -30
+1円上がる毎に30個需要が減る。
+
+1000円から500円上がったら15000個減るので45000。
+
+---
+
+74 ウ○
+
+ガバガバガナンス。
+自浄能力とか透明性とか。
+
+---
+
+75 イ○
+
+マトリクス組織。
+跨いでるやつ。
+
+---
+
+76 エ○
+
+出た。損益分岐点。
+
+利益 = 売上 - 変動費 - 固定費
+変動費は 売上に倍率がかかった物。
+
+変動費 = 売上 * 変動比率
+140 = 700x
+x = 0.2
+
+利益 = 売上 - 売上 * 変動比率 - 固定費
+利益 = 売上(1 - 変動比率) - 固定費
+0 = 売上(1 - 変動比率) - 固定費
+固定費 =  売上(1 - 変動比率)
+売上 = 固定費 / 1 - 変動比率
+損益分岐点 = 500 / 0.8 = 625
+
+---
+
+77 エ○
+
+資産、純資産、負債
+たいしゃくたいしょうひょう
+
+---
+
+78 イ○
+
+ナッシュ均衡
+A → a1
+B → b2
+
+---
+
+79 ア○
+
+サイバーセキュリティ基本法。
+国民に大切だよっていうだけの奴。
+
+---
+
+80 エ×→ウ
+
+準委任契約、仕事すること。
+
+ありゃ。違った。
+
+準委任契約
+法律行為ではない、業務の委任をする契約。
+仕事の完成義務を負うものではない。
+**善管注意義務**がキーワード。
+「善良な管理の注意義務」
+業務を委任された人の職務や能力、社会的地位などから考えて、一般的、客観的に期待される注意をしなければならないという注意義務の事。
+
+発注者の指揮命令下で作業を行う契約
+→
+これは派遣。
+
+善管注意義務というキーワードが有れば完璧ってことか。
+
+---
+
+70/80  
+まぁ、余裕で合格だな。  
+3問くらい普通に正解できる問題もあったので、もっと点は上がる。  
+ネスペの問題は無理。  
 
 基数変換部分は毎回迷うのでパターンを覚えてしまったほうがいいかも。
 基礎理論がちょっと弱いかな。
 
-
-米の移し替えが完了した。
-何粒か無駄にしてしまった。申し訳ない。
-
-筋トレ、独立事象、Java配列
-なんか、余裕なくなってきたな。
-筋トレはどうしようかねぇ。
-やるなら今しかない。
-これ以上は時間がなくなってしまう。
+とりあえず、これでこの参考書に用はなくなったな。  
