10月26日会社分

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -60,16 +60,6 @@ ORマッパーとはなにか？
 日本語の解読と実際に値を入れてみるトレース作業がうまく行けば何とかなる。
 後は運だ。
 
-・疲れたら午前を進めてもいい。
-1つ1つ、人に教える感じで覚える。
-
-
-アルゴリズムの問題やるの怖くなってきた。
-ここまでやってできなかった時が怖い。落ち込む。
-まだまだ運任せなところあるからな。
-→
-やっぱりまだまだダメですね。
-
 ・インデクサーまとめ
 
 ・エバノの勉強記事をtilに映す
@@ -97,17 +87,10 @@ ORマッパーとはなにか？
 ・C# 配列
 ・バニラのWPFで最小のMVVMサンプルを作ってみたい
 ・UTF-8,UNICODE,ShiftJis
-・配列はjavaだけ。
 
 
-・skip,takeをまとめたい。skipの存在を知らなかったからreverse.take.reverseなんてくそ面倒くさいことして実現したのもまとめたい。
-・linqで文字列をjoinするサンプルがわかりずらいので修正したい。
 
-
-・隙間時間は、用語集の確認に使いたい。
-・それらがまとめ終わってから令和3年の午前問題の続きをする。
 ・昨日やったselectmanyとgroupbyのやつもまとめたい。
-
 
 sql インデックス 仕組み
 [インデックスとは？仕組みをわかりやすく解説](https://products.sint.co.jp/siob/blog/index)
@@ -202,3 +185,15 @@ Aは知らんがCが2桁。B が3桁対象なので、Aは4桁まで対応だと
 10.0.0.0~10.255.255.255だった。
 
 〆・午前問題の抜けている問題をやっておきたい。
+
+〆・配列はjavaだけ。
+→とりあえず多重配列でlength使ったら外側の要素数が返却されることが分かった。
+int[][] aa = new int[100][512];
+
+〆・隙間時間は、用語集の確認に使いたい。
+〆・それらがまとめ終わってから令和3年の午前問題の続きをする。
+
+〆・skip,takeをまとめたい。skipの存在を知らなかったからreverse.take.reverseなんてくそ面倒くさいことして実現したのもまとめたい。
+
+〆・linqで文字列をjoinするサンプルがわかりずらいので修正したい。
+
