--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,42 +1,9 @@
 # 後でまとめたいやつら
 
-## 添付プロパティ
-
-例えば、テキストボックスとボタンがあります。
-カーソルが当たっている間は色を変えたいけれど、どちらにもその機能はない。
-それぞれを継承して拡張した、CustomButton,CustomTextを作ってもいいけど、どちらにも同じコードを書くことになるし作ること自体に手間がかかる。
-そういう時に添付プロパティなるものを作って、それをテキストボックスとボタンに実装してあげることで、その機能を実現することができる。
-それが、添付プロパティ。
-
-どうやって作るかは後でまとめる。
-
-
-
-DependencyProperty→バインディングができるようにする。コントロールにそういう機能がある。
-
-INotify
-Classに実装。
-
-バインディングをしたときに、バインド間で通知をしてくれる。
-この処理は.Net側の処理なので、その先で何をやっているかはわからない。
-
-CollectionChanged。
-
-ObsColle 
-Foreachの中で、inに入れるコレクションの内容が変わった時にエラーが発生する。
-これは、イベントが邪魔をしている証拠。
-抑制する必要がある。
-
----
-
 アプリケーション マニフェスト [application manifest]
 アプリケーションおよびそのすべての構成ファイルを記述するファイル。ClickOnce アプリケーションによって使用されます。
 
 ---
-
-## take,skip
-
-[take,skip](https://symfoware.blog.fc2.com/blog-entry-1927.html)
 
 ## aa
 
@@ -104,20 +71,13 @@ if (dutchTreatSlipIDList.Count() >= 2)
 }
 ```
 
-## TryParseとConvertの違い
-
-空文字列 int.Parse(“”), Convert.ToInt32(“”) は共に例外になる
-int.Parse(null) は例外になる。
-Convert.ToInt32(null) はゼロになる。
 
 ``` C#
-// TryParseを1文で済ませたかったらこう書く。因みにTryParseには文字列しか渡せなかったので、使えなかったけど。
-FrontIsPrintCopy = bool.TryParse(_BasicInfo.CopyPrintType.GetValueOrDefault(), out bool frontIsPrintCopy) && frontIsPrintCopy;
-// _BasicInfo.CopyPrintTypeがnullの場合はGetValueOrDefaultで0になってToBooleanでfalseになる。
-FrontIsPrintCopy = System.Convert.ToBoolean(_BasicInfo.CopyPrintType.GetValueOrDefault());
+// この記述が許されるのはC#9から。
+bool? aa = true ? false : null;
+// C#9以前はこのように書くしかない。
+var aa = (bool?)true ? false : null;
 ```
-
-[C#のint.ParseとConvert.ToInt32の違いをマスター](https://www.wareko.jp/blog/master-difference-between-csharp-int-parse-and-convert-toint32)  
 
 ---
 
@@ -125,3 +85,23 @@ FrontIsPrintCopy = System.Convert.ToBoolean(_BasicInfo.CopyPrintType.GetValueOrD
 
 ・俺が仕様書メモとしてまとめてる内容は全て開発フォルダの仕様書フォルダに乗っけておけばいいのでは？
 メモ書き程度のやつは上に持っていくのはどうかな。
+
+・持ち物リスト確認
+・前回の試験の時のアレ確認
+→前回はバナナを持って行った模様。
+
+・7時起床、8時出発、途中ガソリンを入れる。
+
+
+・今を生きているはずなんだが、気が付けば暗くなっている。
+・今日はまず風呂に入るぞ。すぐに寝れる準備と明日の準備を整えてから復習なりなんなりをする。
+さすがに寝2日連続で6時間以下しか寝てないのはやばい。
+
+・イヤーマフは少し取り回しがあれだけど100円で目下の課題が解決したのはでかい。それがすべてだ。
+
+・試験が終わったらさすがに数日は休むぞ。キリがいいから11月までの休息とするか。本当の意味での休みだ。
+やりたいことをやる。他の勉強をしたい。そのあとすぐに102かなー。
+
+・会社にいる時間で基数部分をちょっと復習しておきたい。
+
+・GORAの調査したが、うまいこと行ったので気持ちがよかった。
