10月28日会社分

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -5,13 +5,12 @@
 
 ---
 
-## aa
+## GroupByした要素の内、先頭のものだけ取得したい
 
 [selectMany](https://www.urablog.xyz/entry/2018/05/28/070000#SelectMany%E3%82%92%E4%BD%BF%E3%81%86)
 [groupby](https://www.urablog.xyz/entry/2018/07/07/070000)
 [groupbyして先頭](https://entityframework.net/knowledge-base/3850429/get-the-first-record-of-a-group-in-linq-)
 <https://stackoverflow.com/questions/19012986/how-to-get-first-record-in-each-group-using-linq/39932057>
-[C# LINQで特定の値を先頭にして並び替え](https://teratail.com/questions/120228) 
 
 ``` C#
 // やりたいこと割り勘の伝票IDを取得して、重複を排除して、それが2件以上あれば、別々で割り勘を実行した人がいるという事なので、呼び出せないようにしたい。
@@ -105,3 +104,50 @@ var aa = (bool?)true ? false : null;
 ・会社にいる時間で基数部分をちょっと復習しておきたい。
 
 ・GORAの調査したが、うまいこと行ったので気持ちがよかった。
+
+
+
+
+
+・朝のうちに写真の整理
+・昼休みはデスクマットの受け取り
+・EDINETとかホットアイルをまとめたい。応用の時のあれとか、基本のあれとかまとめる。
+
+
+とりあえず、スマホの画像の整理は終わった。
+もう少しいい運用方法を考えないといけないと思った。
+レシートは面倒臭いので、いつもの買い物以外で発生したレシートだけ保存するようにします。
+最も肝心なのがどうやって保存するか、という問題。
+
+グーグルフォトだったときは、アルバムに入れれば非表示でも見れたから気にする必要なかったけど、Amazonフォトはそこのところが駄目。
+仕方なく、ドライブ作ってるけど、いちいち開いてあれこれやるのが面倒くさい。
+そもそもとらなければいいだけの話ではあるが。
+
+
+
+福田さんがすごいのはアーキテクチャの知識があることだな。
+原因の深い部分まで特定することができる力がある。
+それにプログラムもかけるから鬼に金棒ってわけか。
+ただ、フリーランスとしては生かしにくい知識だな。
+企業にいて初めて真価を発揮するタイプの知識だから、それが合致している今の状態ということだろう。
+
+
+
+しかし、マジで鼻くそほじくっててもできるような問題ばかりだったな。
+過去問よりもさらに簡単になってた。
+試験内容が分からなくなった分、難易度下げた感じかな。
+たしかに、こんな難易度なら転職では全然評価されないだろうなって思った。
+
+今更、登竜門をくぐった。まぁいいさ。
+やることやったんだし、苦手なJavaやアルゴリズムもある程度克服したんだから。
+
+LIKE句の問題も直近で出たな。
+
+
+
+久しぶりの旭川はなんだか活気がなかった気がします。
+昔に比べてきれいにはなってますが、なんだかしぼんだ感じもしました。
+寂しいですね。
+
+
+
