10月29日会社分

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -70,17 +70,61 @@ if (dutchTreatSlipIDList.Count() >= 2)
 }
 ```
 
-
-``` C#
-// この記述が許されるのはC#9から。
-bool? aa = true ? false : null;
-// C#9以前はこのように書くしかない。
-var aa = (bool?)true ? false : null;
-```
-
 ---
 
 ## 雑記
 
 ・俺が仕様書メモとしてまとめてる内容は全て開発フォルダの仕様書フォルダに乗っけておけばいいのでは？
 メモ書き程度のやつは上に持っていくのはどうかな。
+
+
+・エバノの勉強記事をtilに映す
+
+・疲れています。寝足りません。
+
+まぁ、休むとは言ったけど、別に何もしたくないというわけではなく、やりたい勉強をやったり、見たい映画を見たり、溜まっている雑事を片づけたりしたいという意味での休みだ。
+俺にとってそれが休みであり、遊びなのだ。
+
+・髪切るあれどうしよう→段ボールにしまう方向で考える。
+
+・健康診断のアレを考えないといけない。予約が面倒くさい。
+
+・ユニクロで買い物する。ヒートテックシャツがビロビロすぎてストレス。
+　エアリズムパンツも買い換えて余裕で5000円行くだろう。
+
+・肩が凝っている。腕が壊滅状態なので、今日は腹筋をしよう。
+　足とれもいいけどその場合、いい感じの動画を探さないといけない。
+
+・散歩した先に足立さんがいた。
+・近藤君に一階の住民であることをカミングアウトしてみた。どうなるか。
+
+・久しぶりに散歩したか？もう散歩しないとやってられなくなった。
+やっぱり基本情報を過ぎても何も変わらない。むしろ新しく始まっただけだ。
+
+・やべー。応用の時もそうだったけど、試験が終わった後に一気にやることが増えて困るんだよな。
+
+・LPIC102は1か月で終わらせれば時間作れますよ？
+
+・箇条書きの形で兎に角、吐き出してるから少し落ち着いてきたけど、まだまだやるべきことだらけだな。
+
+・今回の応用はさすがに午後対策の参考書買おうかなー。
+メルカリで買って再度売る。
+・デスクマットの出品もしたい。
+
+・ちょっと前にイライラしすぎてぶちまけたから若干ギクシャクしてるよね。
+　課長なんて寄り付かなくなったし。
+
+・斜め上の解釈をするってのの正体が少し具体的になったな。
+ミスリードしてるだけだ。
+あぁ、こういうことでしょって早とちりするから若干解釈がずれる。
+
+
+ホットアイル
+<https://www.sc-siken.com/kakomon/27_haru/am2_24.html>
+
+11月って連休が1日しかない。
+でも祝日は2日あるから休みは多いほうだろう。
+祝日なかったら休日が8日しかないという地獄だが。
+
+
+
