--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -72,59 +72,66 @@ if (dutchTreatSlipIDList.Count() >= 2)
 
 ---
 
+## ホットアイル・コールドアイル
+
+セキスペの問題が基本情報に出たことになるな・・・。
+
+情報セキュリティスペシャリスト平成27年春期 午前Ⅱ 問24
+データセンタにおけるコールドアイルの説明として，適切なものはどれか。
+
+コールドアイル(Cold Aisle)は、データセンターやサーバルームなどの多数のサーバが設置してある施設内で、機器冷却用に設けられた冷気が流れる空間です。
+
+多数のコンピュータが設置してある部屋では、どのように発熱を効率よく抑えるかが問題となります。サーバラックは前面から吸気し背面から排気する構造になっているため、すべてのサーバラックを同じ向きに敷設すると、後方のサーバラックは前方サーバラックから排出される熱い空気を吸い込むことになり冷却不足に陥ってしまう可能性があります。
+
+そこでデータセンターやサーバルームでは、サーバラックの前面と前面、背面と背面を向かい合わせに設置し、前面同士が向かい合う空間には冷たい空気を流し、背面同士が向かい合う空間には熱い空気を天井へ排気する空気の流れを作ることで効率の良い空調を実現しています。このとき、冷たい空気が流れる空間(エリア)を「**コールドアイル**」、それに対して熱い空気が流れる空間(エリア)を「**ホットアイル**」といいます。
+
+アイル(aisle)は「通路」を意味する言葉で、教会や劇場、列車や飛行機などの座席と座席の間にある通路のことを表す言葉として使われています。冷気が流れる通路のため「コールドアイル」と称されています。
+
+IT機器の冷却を妨げる熱気をラックの前面(吸気面)に回り込ませないための板であり，IT機器がマウントされていないラックの空き部分に取り付ける。
+ブランクパネルの説明です。
+
+寒冷な外気をデータセンタ内に直接導入してIT機器を冷却するときの，データセンタへの外気の吸い込み口である。
+外気導入ダクトや給気スリットの説明です。
+
+空調機からの冷気とIT機器からの熱排気を分離するために，ラックの前面(吸気面)同士を対向配置したときの，ラックの前面同士に挟まれた冷気の通る部分である。
+正しい。コールドアイルの説明です。
+
+発熱量が多い特定の領域に対して，全体空調とは別に個別空調装置を設置するときの，個別空調用の冷媒を通すパイプである。
+冷媒配管の説明です。
+
+---
+
+## EDINET（Electronic Disclosure for Investors' NETwork・エディネット）
+
+Disclosure:開示、発表
+
+金融商品取引法上で開示用電子情報処理組織と呼ばれる、内閣府の使用するホストコンピューター・提出会社の使用するコンピューター・金融商品取引所（及び金融商品取引業協会）のコンピューターを結んだ、同法に基づく開示文書に関する電子情報開示システムである。
+
+本システムは金融庁の所管であり、EDGARをモデルとして構築され、開示文書をウェブサイト上で閲覧できる。
+
+---
+
+## ハッカソン(hackathon)
+
+《hack（ハック）＋marathon（マラソン）からの造語》ソフトウエア開発者が、一定期間集中的にプログラムの開発やサービスの考案などの共同作業を行い、その技能やアイデアを競う催し。期間はふつう数時間から数日程度。企業内で研修の一環として行われるほか、大手企業が広く外部から参加者を集めて自社の製品やサービスに役立つアイデアを競わせたり、ベンチャーキャピタルによる出資対象の選定に利用されたりする。ソフトウエア以外にも、機器やプロジェクトについてのアイデアを対象とするものもある。ハックデイ。ハックフェスト。コードフェスト。→アイデアソン
+
+ハッカソンで検索すると意識高そうな画像ばかり出てくるアレ。
+マラソンってついてるのに短期間なのね。
+
+---
+
+## レイテンシ
+
+latency : 潜伏、潜在
+
+潜伏時間、潜時、待ち時間、反応時間とは、デバイスに対してデータ転送などを要求してから、その結果が返送されるまでの不顕性の高い遅延時間のこと。
+データ転送における指標のひとつで、転送要求を出してから実際にデータが送られてくるまでに生じる、通信の遅延時間のことをいいます。
+この遅延時間が短いことをレイテンシが小さい（低い）、遅延時間が長いことをレイテンシが大きい（高い）と表現しています。
+
+
+---
+
 ## 雑記
 
 ・俺が仕様書メモとしてまとめてる内容は全て開発フォルダの仕様書フォルダに乗っけておけばいいのでは？
 メモ書き程度のやつは上に持っていくのはどうかな。
-
-
-・エバノの勉強記事をtilに映す
-
-・疲れています。寝足りません。
-
-まぁ、休むとは言ったけど、別に何もしたくないというわけではなく、やりたい勉強をやったり、見たい映画を見たり、溜まっている雑事を片づけたりしたいという意味での休みだ。
-俺にとってそれが休みであり、遊びなのだ。
-
-・髪切るあれどうしよう→段ボールにしまう方向で考える。
-
-・健康診断のアレを考えないといけない。予約が面倒くさい。
-
-・ユニクロで買い物する。ヒートテックシャツがビロビロすぎてストレス。
-　エアリズムパンツも買い換えて余裕で5000円行くだろう。
-
-・肩が凝っている。腕が壊滅状態なので、今日は腹筋をしよう。
-　足とれもいいけどその場合、いい感じの動画を探さないといけない。
-
-・散歩した先に足立さんがいた。
-・近藤君に一階の住民であることをカミングアウトしてみた。どうなるか。
-
-・久しぶりに散歩したか？もう散歩しないとやってられなくなった。
-やっぱり基本情報を過ぎても何も変わらない。むしろ新しく始まっただけだ。
-
-・やべー。応用の時もそうだったけど、試験が終わった後に一気にやることが増えて困るんだよな。
-
-・LPIC102は1か月で終わらせれば時間作れますよ？
-
-・箇条書きの形で兎に角、吐き出してるから少し落ち着いてきたけど、まだまだやるべきことだらけだな。
-
-・今回の応用はさすがに午後対策の参考書買おうかなー。
-メルカリで買って再度売る。
-・デスクマットの出品もしたい。
-
-・ちょっと前にイライラしすぎてぶちまけたから若干ギクシャクしてるよね。
-　課長なんて寄り付かなくなったし。
-
-・斜め上の解釈をするってのの正体が少し具体的になったな。
-ミスリードしてるだけだ。
-あぁ、こういうことでしょって早とちりするから若干解釈がずれる。
-
-
-ホットアイル
-<https://www.sc-siken.com/kakomon/27_haru/am2_24.html>
-
-11月って連休が1日しかない。
-でも祝日は2日あるから休みは多いほうだろう。
-祝日なかったら休日が8日しかないという地獄だが。
-
-
-
