--- a/English/その他英単語.md
+++ b/English/その他英単語.md
@@ -18,6 +18,14 @@
 LOLのリデンプションは救済って意味だろうな。
 あれサポアイテムだったよな。
 
+
+・narrative
+ナラティブガンダム！！
+物語
+
+響きはかっこいいんですけど、意味は大したことないです。
+
+
 ## 趣味
 
 ・QED : Quod Erat Demonstrandum : かく示された
