10月31日出社前

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -79,6 +79,7 @@ if (dutchTreatSlipIDList.Count() >= 2)
 情報セキュリティスペシャリスト平成27年春期 午前Ⅱ 問24
 データセンタにおけるコールドアイルの説明として，適切なものはどれか。
 
+→
 コールドアイル(Cold Aisle)は、データセンターやサーバルームなどの多数のサーバが設置してある施設内で、機器冷却用に設けられた冷気が流れる空間です。
 
 多数のコンピュータが設置してある部屋では、どのように発熱を効率よく抑えるかが問題となります。サーバラックは前面から吸気し背面から排気する構造になっているため、すべてのサーバラックを同じ向きに敷設すると、後方のサーバラックは前方サーバラックから排出される熱い空気を吸い込むことになり冷却不足に陥ってしまう可能性があります。
@@ -87,6 +88,7 @@ if (dutchTreatSlipIDList.Count() >= 2)
 
 アイル(aisle)は「通路」を意味する言葉で、教会や劇場、列車や飛行機などの座席と座席の間にある通路のことを表す言葉として使われています。冷気が流れる通路のため「コールドアイル」と称されています。
 
+→  
 IT機器の冷却を妨げる熱気をラックの前面(吸気面)に回り込ませないための板であり，IT機器がマウントされていないラックの空き部分に取り付ける。
 ブランクパネルの説明です。
 
@@ -127,6 +129,77 @@ latency : 潜伏、潜在
 潜伏時間、潜時、待ち時間、反応時間とは、デバイスに対してデータ転送などを要求してから、その結果が返送されるまでの不顕性の高い遅延時間のこと。
 データ転送における指標のひとつで、転送要求を出してから実際にデータが送られてくるまでに生じる、通信の遅延時間のことをいいます。
 この遅延時間が短いことをレイテンシが小さい（低い）、遅延時間が長いことをレイテンシが大きい（高い）と表現しています。
+
+パッと思いつく事として、伝送遅延があるけど、それだけがレイテンシではない模様。
+あくまで、要求を出してから送られてくるまでの時間なので、複数の要因が存在する。
+
+### ネットワークにおける遅延（レイテンシ）
+
+[ネットワークにおける遅延（レイテンシ）](https://gist.github.com/hatappo/224c8160c72c1f7649f947caf7fe615a)
+ここが一番参考になる。
+gitでページが飛んでほしくないので、マルコピする。
+
+#### 参考
+
+- [ネットワークの世界における遅延とは](https://www.apposite-tech.com/blog/%e3%83%8d%e3%83%83%e3%83%88%e3%83%af%e3%83%bc%e3%82%af%e3%81%ae%e4%b8%96%e7%95%8c%e3%81%ab%e3%81%8a%e3%81%91%e3%82%8b%e9%81%85%e5%bb%b6%e3%81%a8%e3%81%af/)
+- [ネットワークでなぜ遅延が生じるのか](https://www.slideshare.net/junkato1272/ss-70431661)
+
+#### ネットワークにおける遅延の種類
+
+##### １．アプリケーション遅延 Processing Delay
+
+通信機器の入力IFから出力IFのキューへ到達するまでにかかる時間。
+
+``` txt
+`（通信機器の）入力IF`
+    から
+`（通信機器の）出力IFキュー`
+    に入るまでにかかる時間
+```
+
+比較的単純なPing/ICMPエコーリクエストなどのアプリケーションでは、このアプリケーションによる遅延は、マイクロ秒単位。 一秒間で数万件の株式の取引が行われる、コンピュータによる「高頻度取引(HFT)」の世界でも無い限り（ナノ秒単位の遅延が問題になるそうです）、アプリケーション遅延は無視されることが多い。
+
+アプリケーションが複雑になってくれば、アプリケーション遅延も大きくなる。
+
+##### ２．輻輳遅延 Queueing Delay
+
+通信機器の出力IFキューに入ってから出力処理を行うまでにかかる時間。 通信機器がデータを転送するためにパケットをバッファに保持している時間。
+
+``` txt
+`（通信機器の）出力IFキュー`
+    に入ってから
+`（通信機器の）出力IFキュー`
+    を出るまでにかかる時間
+```
+
+ある回線上に、その回線の帯域幅以上のパケットが到達してしまった場合、ネットワーク上のルータ(またはスイッチ)は、超過したパケットをバッファに溜め込みます。そのバッファを更に超過した場合、パケットは破棄されます。
+
+広帯域回線から狭帯域回線への転送、一時的な輻輳などのためにこのバッファが存在する。
+
+##### ３．伝送遅延 Serialization Delay
+
+通信機器の出力IFからパケットを電気信号や光信号に変換して送信完了するまでにかかる時間。
+
+``` txt
+`（通信機器の）出力IFのデータ`
+    を
+`電気信号や光信号`
+    に変換するのにかかる時間
+```
+
+・広帯域回線では短く、狭帯域回線では長い。 ・パケットのサイズが大きいと長く、サイズが小さいと短い。
+
+1,500バイトのパケットの送出にかかる時間は ・10GE では 1.2 マイクロ秒 ・64Kbps(ISDN) では 187.5 ミリ秒（約１９万マイクロ秒）
+
+##### ４．伝搬遅延 Propagation Delay
+
+パケットが通信経路上を伝わるのにかかる時間。 （通信機器上で発生する遅延ではない）
+光ファイバの伝搬速度は約２０万km/秒。（真空中だと光の速度は約３０万km/秒。）
+
+- 東京〜⼤阪間 500km 往復 5ミリ秒
+- ⽇本〜アメリカ⻄海岸 海底ケーブル 9,000km 往復 90ミリ秒
+- ⼈⼯衛星 静⽌軌道 上空36,000km 2往復 500ミリ秒
+
 
 ---
 
